--- a/app/src/main/res/layout/main_fragment_joke.xml
+++ b/app/src/main/res/layout/main_fragment_joke.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout
+            <com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
@@ -77,9 +77,9 @@
                     </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout>
+            </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
 
-            <com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout
+            <com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
@@ -137,7 +137,7 @@
                     </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout>
+            </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
 
         </LinearLayout>
     </LinearLayout>
