--- a/app/src/main/res/layout/main_fragment_videos.xml
+++ b/app/src/main/res/layout/main_fragment_videos.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout
+                <com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
@@ -82,9 +82,9 @@
                         </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                </com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout>
+                </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
 
-                <com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout
+                <com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
@@ -142,7 +142,7 @@
                         </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                </com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout>
+                </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
 
             </LinearLayout>
 
@@ -151,7 +151,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout
+                <com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
@@ -208,9 +208,9 @@
                         </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                </com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout>
+                </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
 
-                <com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout
+                <com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
@@ -267,7 +267,7 @@
                         </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                </com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout>
+                </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -275,7 +275,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout
+                <com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
@@ -332,9 +332,9 @@
                         </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                </com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout>
+                </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
 
-                <com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout
+                <com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
@@ -394,7 +394,7 @@
                         </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                </com.maxMustermannGeheim.linkcollection.Utilitys.SquareLayout>
+                </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
             </LinearLayout>
         </LinearLayout>
 
