--- a/app/src/main/res/layout/dialog_edit_or_add_show.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_show.xml
@@ -39,6 +39,7 @@
                     android:id="@+id/dialog_editOrAdd_show_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="textCapSentences"
                     android:selectAllOnFocus="true"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
