--- a/app/src/main/res/layout/dialog_edit_or_add_video.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_video.xml
@@ -39,6 +39,7 @@
                     android:id="@+id/dialog_editOrAddVideo_Titel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:dropDownHeight="300dp"
                     android:inputType="textCapSentences"
                     android:selectAllOnFocus="true"
                     android:singleLine="true" />
