--- a/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
@@ -38,6 +38,7 @@
                     android:id="@+id/dialog_editOrAddKnowledge_Titel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="textCapSentences"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
 
