--- a/app/src/main/res/layout/dialog_settings_video.xml
+++ b/app/src/main/res/layout/dialog_settings_video.xml
@@ -109,88 +109,68 @@
 
         </LinearLayout>
 
+    </LinearLayout>
 
-        <!--            <LinearLayout-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="match_parent"-->
-        <!--                android:gravity="center_vertical"-->
-        <!--                android:orientation="vertical">-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="?android:attr/listDivider" />
 
-        <!--                <TextView-->
-        <!--                    android:layout_width="match_parent"-->
-        <!--                    android:layout_height="wrap_content"-->
-        <!--                    android:text="Update"-->
-        <!--                    android:textStyle="bold" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"
+        android:orientation="vertical">
 
-        <!--                <LinearLayout-->
-        <!--                    android:layout_width="match_parent"-->
-        <!--                    android:layout_height="match_parent"-->
-        <!--                    android:gravity="center_vertical"-->
-        <!--                    android:orientation="horizontal">-->
-
-
-        <!--                    <LinearLayout-->
-        <!--                        android:layout_width="wrap_content"-->
-        <!--                        android:layout_height="wrap_content"-->
-        <!--                        android:layout_weight="1"-->
-        <!--                        android:orientation="vertical">-->
-
-        <!--                        <TextView-->
-        <!--                            android:layout_width="wrap_content"-->
-        <!--                            android:layout_height="wrap_content"-->
-        <!--                            android:text="Nach neuerer Version Suchen und updaten"-->
-        <!--                            android:textSize="12sp" />-->
-
-        <!--                        <LinearLayout-->
-        <!--                            android:layout_width="match_parent"-->
-        <!--                            android:layout_height="wrap_content"-->
-        <!--                            android:gravity="center_vertical"-->
-        <!--                            android:orientation="horizontal">-->
-
-        <!--                            <TextView-->
-        <!--                                android:layout_width="wrap_content"-->
-        <!--                                android:layout_height="wrap_content"-->
-        <!--                                android:layout_marginRight="5dp"-->
-        <!--                                android:text="Aktuelle Version:"-->
-        <!--                                android:textSize="12sp"-->
-        <!--                                android:textStyle="italic" />-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:name="Details"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold" />
 
 
-        <!--                            <TextView-->
-        <!--                                android:id="@+id/settings_others_version"-->
-        <!--                                android:layout_width="wrap_content"-->
-        <!--                                android:layout_height="wrap_content"-->
-        <!--                                android:layout_marginRight="8dp"-->
-        <!--                                android:textSize="12sp"-->
-        <!--                                android:textStyle="italic"-->
-        <!--                                tools:text="1.1" />-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <!--                            <TextView-->
-        <!--                                android:id="@+id/settings_others_changeLog"-->
-        <!--                                android:layout_width="wrap_content"-->
-        <!--                                android:layout_height="wrap_content"-->
-        <!--                                android:layout_gravity="center_horizontal"-->
-        <!--                                android:clickable="true"-->
-        <!--                                android:foreground="@drawable/ripple"-->
-        <!--                                android:padding="5dp"-->
-        <!--                                android:text="Change-Log"-->
-        <!--                                android:textColor="@color/colorAccent"-->
-        <!--                                android:textSize="12sp"-->
-        <!--                                android:textStyle="italic" />-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-        <!--                        </LinearLayout>-->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TMDb shortcut anzeigen"
+                    android:textStyle="bold" />
 
-        <!--                    </LinearLayout>-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-        <!--                    <Button-->
-        <!--                        android:id="@+id/settings_others_checkForUpdate"-->
-        <!--                        style="@style/Widget.AppCompat.Button.Borderless.Colored"-->
-        <!--                        android:layout_width="wrap_content"-->
-        <!--                        android:layout_height="wrap_content"-->
-        <!--                        android:text="Auf Updates \nüberprüfen" />-->
-        <!--                </LinearLayout>-->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Direktzugriff zur passenden TMDb seite anzeigen"
+                        android:textSize="12sp" />
 
-        <!--            </LinearLayout>-->
+                </LinearLayout>
+            </LinearLayout>
+
+            <Switch
+                android:id="@+id/dialogSettingsVideo_edit_tmdbShortcut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:checked="true" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
