--- a/app/src/main/res/layout/main_fragment_knowledge.xml
+++ b/app/src/main/res/layout/main_fragment_knowledge.xml
@@ -339,7 +339,7 @@
 <!--                android:elevation="3dp"-->
 <!--                android:foreground="@drawable/ripple"-->
 <!--                android:gravity="center"-->
-<!--                android:onClick="showLaterMenu"-->
+<!--                android:onClick="showModeMenu"-->
 <!--                android:orientation="vertical">-->
 
 <!--                <androidx.constraintlayout.widget.ConstraintLayout-->
