--- a/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
@@ -45,11 +45,14 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/dialog_editOrAddKnowledge_content_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/dialog_editOrAddKnowledge_content_label"
+                style="@style/TextButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -67,11 +70,16 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/dialog_editOrAddKnowledge_list_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <TextView
+                android:id="@+id/dialog_editOrAddKnowledge_list_label"
+                style="@style/TextButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -82,6 +90,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/dialog_editOrAddKnowledge_list"
                 android:layout_width="match_parent"
+                android:clickable="false"
+                android:focusable="false"
                 android:layout_height="wrap_content" />
 
 
