--- a/app/src/main/res/layout/dialog_edit_or_add_video.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_video.xml
@@ -21,9 +21,12 @@
             android:gravity="center_vertical">
 
             <TextView
+                android:id="@+id/dialog_editOrAddVideo_title_label"
+                style="@style/TextButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
+                android:clickable="false"
                 android:text="Titel:"
                 android:textStyle="bold" />
 
@@ -151,7 +154,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/dialog_editOrAddVideo_Url_allLayout"
+            android:id="@+id/dialog_editOrAddVideo_url_allLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -165,14 +168,14 @@
                 android:textStyle="bold" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/dialog_editOrAddVideo_Url_layout"
+                android:id="@+id/dialog_editOrAddVideo_url_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/dialog_editOrAddVideo_Url"
+                    android:id="@+id/dialog_editOrAddVideo_url"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:selectAllOnFocus="true"
