--- a/app/src/main/res/layout/list_item_knowledge.xml
+++ b/app/src/main/res/layout/list_item_knowledge.xml
@@ -94,15 +94,27 @@
                     android:text="Inhalt:"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/listItem_knowledge_content"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ellipsize="marquee"
-                    android:fadingEdge="horizontal"
-                    android:singleLine="true"
-                    tools:text="Text..." />
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/listItem_knowledge_content"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ellipsize="marquee"
+                        android:fadingEdge="horizontal"
+                        android:singleLine="true"
+                        tools:text="Text..." />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/listItem_knowledge_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"/>
+                </LinearLayout>
 
             </LinearLayout>
 
