--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="colorText">@color/colorDayNightContent</color>
     <color name="colorText_hover">#999999</color>
     <color name="colorDayNightContent">#757575</color>
+    <color name="test">#80757575</color>
     <color name="colorBackground">#fafafa</color>
     <color name="colorBackgroundLight">#ffffff</color>
 </resources>
