--- a/app/src/main/res/layout/dialog_detail_video.xml
+++ b/app/src/main/res/layout/dialog_detail_video.xml
@@ -251,15 +251,15 @@
                 android:text="Bewerting:"
                 android:textStyle="bold" />
 
-            <RatingBar
+            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                 android:id="@+id/dialog_video_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:isIndicator="true"
                 android:max="5"
                 android:numStars="5"
-                android:rating="2.5"
-                android:stepSize="0.5" />
+                android:rating="3.25"
+                android:stepSize="0.25" />
 
         </LinearLayout>
 
