--- a/app/src/main/res/layout/list_item_space_setting.xml
+++ b/app/src/main/res/layout/list_item_space_setting.xml
@@ -17,6 +17,13 @@
         tools:text="Name" />
 
     <ImageView
+        android:id="@+id/list_spaceSetting_lock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:srcCompat="@drawable/ic_lock_open" />
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_more" />
