--- a/app/src/main/res/layout/list_item_catigory_item.xml
+++ b/app/src/main/res/layout/list_item_catigory_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
@@ -7,22 +7,40 @@
     android:clickable="true"
     android:elevation="3dp"
     android:foreground="@drawable/ripple"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingHorizontal="20dp"
-    android:paddingVertical="15dp">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/listItem_catigoryItem_name"
+    <LinearLayout
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/listItem_catigoryItem_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="Object" />
+
+        <TextView
+            android:id="@+id/userlistItem_catigoryItem_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:text="–" />
+
+    </LinearLayout>
+
+    <CheckBox
+        android:id="@+id/userlistItem_catigoryItem_ckeck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:text="Object" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:clickable="false" />
 
-    <TextView
-        android:id="@+id/userlistItem_catigoryItem_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:text="–" />
-</LinearLayout>
+</RelativeLayout>
