--- a/app/src/main/res/menu/task_bar_catigory.xml
+++ b/app/src/main/res/menu/task_bar_catigory.xml
@@ -3,7 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/taskBar_catigory__random"
+        android:id="@+id/taskBar_catigory_multiSelect"
+        android:icon="@drawable/ic_multi_select"
+        android:title="Mehrere Auswählen"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/taskBar_catigory_random"
         android:icon="@drawable/ic_random"
         android:title="Zufall"
         app:showAsAction="always" />
@@ -27,6 +32,6 @@
     <item
         android:id="@+id/taskBar_catigory__showAs"
         android:icon="@drawable/ic_show_as_list"
-        android:title="Zufall"
+        android:title="Anzeigen Als"
         app:showAsAction="always" />
 </menu>
