Fast alle Dialoge durch neue ersetzt

--- a/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
@@ -89,9 +89,10 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/dialog_editOrAddKnowledge_list"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:clickable="false"
                 android:focusable="false"
-                android:layout_height="wrap_content" />
+                android:nestedScrollingEnabled="true" />
 
 
         </LinearLayout>
