--- a/app/src/main/res/layout/activity_catigorys.xml
+++ b/app/src/main/res/layout/activity_catigorys.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Activities.Content.VideoActivity">
 
     <SearchView
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:focusable="auto"
         android:iconifiedByDefault="false"
+        android:inputType="textCapSentences"
         android:queryBackground="@android:color/transparent"
         android:queryHint="ändern ******"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,30 +26,28 @@
         android:id="@+id/catigorys_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_weight="1"
         android:background="?android:attr/listDivider"
         app:layout_constraintTop_toBottomOf="@id/catigorys_search" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/catigorys_recycler"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:paddingHorizontal="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/catigorys_divider" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/catigorys_confirmDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_check"
-        tools:visibility="visible" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/catigorys_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingHorizontal="8dp" />
+
+        <TextView
+            android:id="@+id/no_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:text="Kein Eintrag"
+            android:textStyle="italic" />
+    </FrameLayout>
+
+</LinearLayout>
