Suche für alle hinzugefügt und andere Änderungen

--- a/app/src/main/res/layout/activity_joke.xml
+++ b/app/src/main/res/layout/activity_joke.xml
@@ -12,10 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="auto"
-        android:inputType="textCapSentences"
         android:iconifiedByDefault="false"
+        android:inputType="textCapSentences"
         android:queryBackground="@android:color/transparent"
-        android:queryHint="Titel, Kategorie"
+        android:queryHint="Titel, Kategorie ('&amp;' als 'und'; '|' als 'oder')"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
