--- a/app/src/main/res/layout/activity_show.xml
+++ b/app/src/main/res/layout/activity_show.xml
@@ -11,11 +11,11 @@
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textCapSentences"
         android:focusable="auto"
         android:iconifiedByDefault="false"
+        android:inputType="textCapSentences"
         android:queryBackground="@android:color/transparent"
-        android:queryHint="Filter eingeben">
+        android:queryHint="Filter eingeben ('&amp;' als 'und'; '|' als 'oder')">
 
     </SearchView>
 
