--- a/app/src/main/res/layout/dialog_detail_show.xml
+++ b/app/src/main/res/layout/dialog_detail_show.xml
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
-                    android:text="Genre"
+                    android:text="Genre:"
                     android:textStyle="bold" />
 
                 <TextView
@@ -116,26 +116,61 @@
             android:layout_weight="1"
             tools:text="Staffeln: *, Folgen: *, " />
 
-        <ImageView
-            android:id="@+id/dialog_detailShow_internet"
-            style="@style/ImageButtonStyle"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_internet" />
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/dialog_detailShow_notification"
-            style="@style/ImageButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_notification" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/dialog_detailShow_list"
-            style="@style/ImageButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_list" />
+                <ImageView
+                    android:id="@+id/dialog_detailShow_internet"
+                    style="@style/ImageButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_internet" />
+
+                <ImageView
+                    android:id="@+id/dialog_detailShow_notification"
+                    style="@style/ImageButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_notification" />
+
+                <ImageView
+                    android:id="@+id/dialog_detailShow_list"
+                    style="@style/ImageButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_list" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="end">
+                <ImageView
+                    android:id="@+id/dialog_detailShow_reset"
+                    style="@style/ImageButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_reset" />
+
+                <ImageView
+                    android:id="@+id/dialog_detailShow_sync"
+                    style="@style/ImageButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_sync" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
