--- a/app/src/main/res/layout/dialog_share_knowledge.xml
+++ b/app/src/main/res/layout/dialog_share_knowledge.xml
@@ -30,6 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:inputType="textCapSentences"
                 tools:text="Name1" />
 
             <CheckBox
@@ -55,6 +56,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:inputType="textCapSentences"
                 tools:text="Inhalt.." />
 
             <CheckBox
